[package]
name = "win_can_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = "4.7.2"
ringbuf = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4.7"
mpsc = "0.2.6"
crosscan = { git = "https://github.com/Cyborg-Dynamics-Engineering/cross-can.git", version = "0.1.0" }
tokio = { version = "1.47.1", features = ["full", "net"] }
named_pipe = "0.4.1"
