[package]
name = "win_can_utils"
version = "0.1.2"
edition = "2024"
authors = ["Timothy Mead", "Ryan Marple"]
license = "MIT OR Apache-2.0"
description = "Implementing the functionality of can-utils in Windows!"
documentation = "https://github.com/Cyborg-Dynamics-Engineering/win-can-utils"

[dependencies]
serialport = "4.7.2"
ringbuf = "0.4"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4.7"
mpsc = "0.2.6"
crosscan = { git = "https://github.com/Cyborg-Dynamics-Engineering/cross-can.git", rev = "850a96d" }
tokio = { version = "1.47.1", features = ["full", "net"] }
named_pipe = "0.4.1"
futures = "0.3.31"
anyhow = "1.0.99"
async-trait = "0.1.89"
tokio-serial = "5.4.5"
bincode = { version = "2.0.1", features = ["serde"] }
peak-can-sys = "0.1.2"

[package.metadata.wix]
eula = "LICENSE.rtf"
